Sforce8 Project Data/src/objects/CommDefine__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AppNS__c</fullName>
        <defaultValue>&apos;2&apos;</defaultValue>
        <description>Packageネームスペース</description>
        <label>AppNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BG_Color__c</fullName>
        <defaultValue>&quot;#A2B9FD&quot;</defaultValue>
        <description>Bridal Page Background Color</description>
        <inlineHelpText>Enter color value for Bridal page
Ex: #A2B9FD(color code)
or
Red(color name)</inlineHelpText>
        <label>BG Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingCurves__c</fullName>
        <defaultValue>&apos;2:|0|5|10|15|20|1:|0|5|10|15|20&apos;</defaultValue>
        <description>売上画面：Booking Curves施設コードの定義(例：2:|0|5|10|15|20|1:|0|5|10|15|20)</description>
        <label>BookingCurves引数</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityCode__c</fullName>
        <label>施設コード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityName__c</fullName>
        <label>施設名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayee1__c</fullName>
        <label>施設振込先１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayee2__c</fullName>
        <label>施設振込先２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayee3__c</fullName>
        <label>施設振込先３</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayeeAcount__c</fullName>
        <label>施設振込先口座</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuestRooms__c</fullName>
        <defaultValue>20</defaultValue>
        <label>客室数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <defaultValue>&apos;0000&apos;</defaultValue>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanProdCdPrefixNum__c</fullName>
        <defaultValue>5</defaultValue>
        <description>プラン商品コードの番号採番する場合、頭開始の数字</description>
        <label>プラン商品コード頭数字</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posreg__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>0: NOP, 1:Jinya, 2:HC</description>
        <label>POSレジ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorShowHisFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>選択すると、過去と未来も日付け指定にて、参照出来る</description>
        <label>ルームインジケータ履歴表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeReport__c</fullName>
        <defaultValue>&quot;$0001 客室タイプ別予約表&quot;</defaultValue>
        <label>予約ポップレポート名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomUseEbFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True場合、予約ポップ画面に、E/B統計機能を起動する</description>
        <inlineHelpText>True場合、予約ポップ画面に、E/B統計機能を起動する</inlineHelpText>
        <label>E/B機能機能フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoundType__c</fullName>
        <defaultValue>1</defaultValue>
        <description>0:切り捨て 
1:四捨五入 
税金計算の端数処理の項目</description>
        <inlineHelpText>0:切り捨て 
1:四捨五入 
税金計算の端数処理の項目</inlineHelpText>
        <label>税の端数処理</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimerSecond__c</fullName>
        <defaultValue>60</defaultValue>
        <label>画面定時更新秒数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <inlineHelpText>1:税込、サービス料抜き
2:税込、サービス料込
3:税抜、サービス料抜き</inlineHelpText>
        <label>商品単価定義区分</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>共通定義</label>
</CustomObject>